2011-02-10  Douglas Bates  <bates@stat.wisc.edu>

	* inst/include/Rcpp/XPtr.h: Replace calls to EXTPTR_PTR with
	R_ExternalPtrAddr.  The distinction is important when R is
	compiled with PROTECTCHECK enabled.

2011-02-01  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: extra PROTECT'ion in several places

2011-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/DataFrame_generated.h: Assign Rf_install() result
	to local SEXP (by modifying generator script creating the file)
	* inst/include/Rcpp/DataFrame.h: Assign Rf_install() result to local SEXP
	* inst/include/Rcpp/DottedPair.h: idem
	* inst/include/Rcpp/grow.h: idem
	* inst/include/Rcpp/Module.h: idem
	* inst/include/Rcpp/vector/eval_methods.h: idem
	* inst/include/Rcpp/vector/Vector.h: idem

2011-01-25  Douglas Bates  <bates@stat.wisc.edu>

	* src/exceptions.cpp: Assign Rf_install() result to local SEXP
	* src/Evaluator.cpp: idem
	* src/Reference.cpp: idem
	* src/S4.cpp: idem

	* inst/include/Rcpp/Date.h: Use predefined symbol.

2011-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/cache.cpp: Assign Rf_install() result to local SEXP
	* src/Environment.cpp: idem
	* src/Evaluator.cpp: idem
	* src/Function.cpp: idem
	* src/Function.cpp: idem
	* src/RObject.cpp: idem
	* src/Symbol.cpp: idem

	* inst/doc/Rcpp.bib: Added SoDA (some time ago)

2011-01-13  Douglas Bates  <bates@stat.wisc.edu>

	* src/Reference.cpp: Protect the value being set in Reference::FieldProxy::set

2011-01-11  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/string_proxy.h: fix implicit conversion to int,
	reported by Daniel Sabanes Bove on Rcpp-devel

	* inst/unitTests/runit.vector.R: unit test for the above fix

2011-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp.bib: Updated a number of CRAN versions

2011-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/config.h (RCPP_VERSION): Set to 0.9.0, at last.
